TEST_PROGRAMS/INVALID/justin_domignue/invalid-3.min
# Error in syntax
vor identifier: string; # vor -> var

